--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -9,6 +9,15 @@
                 "name": "controller",
                 "resourceId": "/controller"
             }
+        },
+        {
+            "name": "i2c-lcd",
+            "type": "ccs-debug",
+            "request": "launch",
+            "projectInfo": {
+                "name": "i2c-lcd",
+                "resourceId": "/i2c-lcd"
+            }
         }
     ]
 }
