this push probably won't work

--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -27,6 +27,15 @@
                 "name": "i2c-led-bar",
                 "resourceId": "/i2c-led-bar"
             }
+        },
+        {
+            "name": "lcd-proof",
+            "type": "ccs-debug",
+            "request": "launch",
+            "projectInfo": {
+                "name": "lcd-proof",
+                "resourceId": "/lcd-proof"
+            }
         }
     ]
 }
